--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="grid__item-wide-1">
         <div class="testimonial testimonial--purple">
           <div class="testimonial__user">
-            <img class="testimonial__image" src="/images/image-daniel.jpg" />
+            <img class="testimonial__image" src="./images/image-daniel.jpg" />
             <div class="text-white " >
               <p>Daniel Clifford</p>
             <p>Verified Graduate</p>
@@ -50,7 +50,7 @@
       <div class="grid__item-small-1">
         <div class="testimonial testimonial--grayblue">
           <div class="testimonial__user">
-            <img class="testimonial__image" src="/images/image-jonathan.jpg" />
+            <img class="testimonial__image" src="./images/image-jonathan.jpg" />
             <div class="text-white " >
               <p>Jonathan Walters</p>
             <p>Verified Graduate</p>
@@ -70,7 +70,7 @@
       <div class="grid__item-tall">
         <div class="testimonial testimonial--white">
           <div class="testimonial__user">
-            <img class="testimonial__image" src="/images/image-kira.jpg" />
+            <img class="testimonial__image" src="./images/image-kira.jpg" />
             <div class="text-gray " >
               <p>Kira Whittle</p>
             <p>Verified Graduate</p>
@@ -99,7 +99,7 @@
       <div class="grid__item-small-2">
         <div class="testimonial testimonial--white">
           <div class="testimonial__user">
-            <img class="testimonial__image" src="/images/image-jeanette.jpg" />
+            <img class="testimonial__image" src="./images/image-jeanette.jpg" />
             <div class="text-gray " >
               <p>Jeanette Harmon</p>
             <p>Verified Graduate</p>
@@ -119,7 +119,7 @@
       <div class="grid__item-wide-2">
         <div class="testimonial testimonial--darkblue">
           <div class="testimonial__user">
-            <img class="testimonial__image" src="/images/image-patrick.jpg" />
+            <img class="testimonial__image" src="./images/image-patrick.jpg" />
             <div class="text-white " >
               <p>Patrick Abrams</p>
             <p>Verified Graduate</p>
